<resources>
    <string name="app_name">Eye Care</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blue_light">Blue Light</string>
    <string name="filter">Filter</string>
    <string name="provide_digital_solution_for_health">Provide digital solution for health</string>
    <string name="blue_light_sleep"><![CDATA[Blue Light & Sleep]]></string>
    <string name="studies_shows_that_screen_blue_light_before_bed_can_disrupt_sleep_making_it_harder_to_fall_asleep">Studies shows that screen blue light before bed can disrupt sleep,making it harder to fall asleep.</string>
    <string name="melatonin_impact">Melatonin Impact</string>
    <string name="blue_light_lowers_melatonin_levels_which_affects_your_natural_sleep_wake_cycle_and_sleep_quality">Blue light lowers melatonin levels, which affects your natural sleep-wake cycle and sleep quality.</string>
    <string name="set_filters_for_safety">Set Filters For Safety</string>
    <string name="use_filters_to_gradually_reduce_blue_light_exposure_helping_protect_your_eyes_and_support_better_sleep">Use filters to gradually reduce blue light exposure, helping protect your eyes and support better sleep.</string>
    <string name="restore_healthy_sleep">Restore Healthy Sleep</string>
    <string name="our_app_promotes_eye_protection_and_better_sleep_helping_you_to_maintain_a_natural_sleep_cycle">Our app promotes eye protection and better sleep, helping you to maintain a natural sleep cycle.</string>
    <string name="blue_light_filter">Light Filter</string>
    <string name="candle_light">Candle Light</string>
    <string name="click_here_to_change_the_color_filter">Click here to change the color filter.</string>
    <string name="how_it_works">How it works?</string>
    <string name="ad_is_loading">Ad is loading</string>
    <string name="_60s_pause">60s Pause</string>
    <string name="auto_timer">Auto Timer</string>
    <string name="intensity">Intensity</string>
    <string name="_75">75%</string>
    <string name="screen_dim">Screen Dim</string>
    <string name="filter_dashboard">Filter Dashboard</string>
    <string name="blue">Blue</string>
    <string name="color_temperature">Color Temperature</string>
    <string name="_4500k">4500K</string>
    <string name="dashboard">Dashboard</string>
    <string name="setting">Setting</string>
    <string name="let_s_add_and_see_all_the_task">Let\'s add and see all \n the task.</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rating">Rating</string>
    <string name="share_app">Share App</string>
    <string name="about">About</string>
    <string name="faqs">FAQs</string>
    <string name="save">Save</string>
    <string name="reminder">Reminder</string>
    <string name="enter_heading">Enter Heading ..</string>
    <string name="start">Start</string>
    <string name="time">Time</string>
    <string name="end">End</string>
    <string name="all">All</string>
    <string name="personal">Personal</string>
    <string name="work">Work</string>
    <string name="study">Study</string>
    <string name="enable_overlay_service_for_eye_care">Enable Overlay Service for Eye Care</string>
    <string name="permission_is_needed_to_apply_a_blue_light_filter_for_reduced_eye_strain_and_better_comfort_especially_in_low_light_conditions">Permission is needed to apply a blue light filter for reduced eye strain and better comfort, especially in low-light conditions.</string>
    <string name="enable_accessibility_service_for_eye_care">Enable Accessibility Service for Eye Care</string>
    <string name="accessibility_service_permission_is_required_to_automatically_adjust_the_blue_light_filter_for_seamless_continuous_eye_protection_across_all_apps">Accessibility Service permission is required to automatically adjust the blue light filter for seamless, continuous eye protection across all apps.</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="allow">Allow</string>
</resources>