<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SplashScreenFragment"
    android:background="@color/light_black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/splash_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_splash_screen"
        android:layout_marginTop="@dimen/__117sdp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhaina_2"
        android:text="@string/blue_light"
        android:textAlignment="center"
        android:textColor="@color/light_white_text"
        android:textSize="@dimen/__32ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_280sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_minus22sdp"
        android:textColor="@color/light_white_text"
        android:textSize="@dimen/__32ssp"
        android:textAlignment="center"
        android:fontFamily="@font/baloo_bhaina_2"
        android:textStyle="bold"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/__100sdp"
        app:layout_constraintBottom_toTopOf="@+id/text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_minus25sdp"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/provide_digital_solution_for_health"
        android:textColor="@color/light_white_text"
        android:textSize="@dimen/__16ssp"
        android:fontFamily="@font/baloo_bhaina_2"
        android:layout_marginBottom="@dimen/__25sdp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>