<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FilterDashboardFragment"
    android:background="@color/light_black"
    android:paddingHorizontal="@dimen/__24sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/__24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/menu_text"
                android:layout_width="@dimen/__24sdp"
                android:layout_height="@dimen/__24sdp"
                android:layout_marginTop="@dimen/__8sdp"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/blue_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/__8sdp"
            android:layout_marginTop="@dimen/__4sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/filter"
            android:textColor="@color/blue_alpha_50"
            android:textSize="@dimen/__20ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="@+id/menu" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/light_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/__6sdp"
            android:layout_marginTop="@dimen/__4sdp"
            android:fontFamily="@font/montserrat_bold"
            android:paddingTop="1dp"
            android:text="@string/dashboard"
            android:textColor="@color/light_white_text"
            android:textSize="@dimen/__18ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/blue_title_text"
            app:layout_constraintTop_toTopOf="@+id/menu" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/thumb_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/menu"
            app:thumbTint="@color/blue"
            app:track="@drawable/track_drawable" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/color_temp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/__12sdp"
        android:background="@drawable/selected_filter_bg"
        android:padding="@dimen/__12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_menu">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/color_temperature"
            android:textAlignment="center"
            android:textColor="@color/light_white_text"
            android:textSize="@dimen/__16ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/temperature_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/_4500k"
            android:textAlignment="center"
            android:textColor="@color/light_white_text"
            android:textSize="@dimen/__16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/__12sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_temperature"
            app:spanCount="5"
            tools:listitem="@layout/item_temp_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/how_it_works"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/__12sdp"
            android:background="@drawable/stroke_bg_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_recycler_view">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/how_it_works_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/__12sdp"
                android:layout_marginStart="@dimen/__24sdp"
                android:src="@drawable/ic_how_it_works"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/how_it_works_forward_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/__12sdp"
                android:layout_marginEnd="@dimen/__24sdp"
                android:src="@drawable/forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/how_it_works_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/__12sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/how_it_works"
                android:textColor="@color/light_white_text"
                android:textSize="@dimen/__16ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/how_it_works_forward_icon"
                app:layout_constraintStart_toEndOf="@+id/how_it_works_icon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ads"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/__16sdp"
        android:background="@drawable/stroke_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_temp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ad_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/__40sdp"
            android:text="@string/ad_is_loading"
            android:textColor="@color/light_white_text"
            android:textSize="@dimen/__11ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/intensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/__12sdp"
        android:background="@drawable/selected_filter_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ads">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/intensity_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/__12sdp"
            android:layout_marginTop="@dimen/__12sdp"
            android:layout_marginBottom="@dimen/__50sdp"
            android:src="@drawable/ic_intensity_filter_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/intensity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/__12sdp"
            android:text="@string/intensity"
            android:textColor="@color/light_white_text"
            android:textSize="@dimen/__16ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/intensity_icon"
            app:layout_constraintTop_toTopOf="@id/intensity_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/intensity_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/__12sdp"
            android:src="@drawable/ic_intensity_blue"
            android:text="@string/_75"
            android:textColor="@color/light_white_text"
            android:textSize="@dimen/__16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/intensity_icon" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/intensity_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/__22sdp"
            android:max="75"
            android:progress="25"
            android:progressTint="@color/white"
            android:thumb="@drawable/ic_thumb_filter_selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intensity_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/__12sdp"
        android:background="@drawable/selected_filter_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dim_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/__12sdp"
            android:layout_marginTop="@dimen/__12sdp"
            android:layout_marginBottom="@dimen/__50sdp"
            android:src="@drawable/ic_screen_dim_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dim_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/__12sdp"
            android:text="@string/screen_dim"
            android:textColor="@color/light_white_text"
            android:textSize="@dimen/__16ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/dim_icon"
            app:layout_constraintTop_toTopOf="@id/dim_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dim_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/__12sdp"
            android:src="@drawable/ic_intensity_blue"
            android:text="@string/_75"
            android:textColor="@color/light_white_text"
            android:textSize="@dimen/__16ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dim_icon" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/dim_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/__22sdp"
            android:max="75"
            android:progress="25"
            android:progressTint="@color/white"
            android:thumb="@drawable/ic_thumb_filter_selected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dim_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>