<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/time_picker_dialog_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/blue_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/__24sdp"
        android:layout_marginTop="@dimen/__24sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/start"
        android:textColor="@color/blue_alpha_50"
        android:textSize="@dimen/__20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/__2sdp"
        app:layout_constraintEnd_toStartOf="@id/light_title_text"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/light_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/__4sdp"
        android:layout_marginTop="@dimen/__24sdp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="1dp"
        android:text="@string/time"
        android:textColor="@color/light_white_text"
        android:textSize="@dimen/__20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/blue_title_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/__200sdp"/>

    <TimePicker
        android:id="@+id/start_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="@id/blue_title_text"
        app:layout_constraintTop_toBottomOf="@id/light_title_text"
        android:layout_marginStart="@dimen/_27sdp"
        android:layout_marginTop="@dimen/__10sdp"
        android:theme="@style/CustomTimePickerStyle"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/end_blue_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/__24sdp"
        android:layout_marginTop="@dimen/__24sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/end"
        android:textColor="@color/blue_alpha_50"
        android:textSize="@dimen/__20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_time_picker"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/end_light_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/__4sdp"
        android:layout_marginTop="@dimen/__24sdp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="1dp"
        android:text="@string/time"
        android:textColor="@color/light_white_text"
        android:textSize="@dimen/__20ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/end_blue_title_text"
        app:layout_constraintTop_toBottomOf="@id/start_time_picker"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/__200sdp"
        />

    <TimePicker
        android:id="@+id/end_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="@id/end_blue_title_text"
        app:layout_constraintTop_toBottomOf="@id/end_light_title_text"
        android:layout_marginStart="@dimen/_27sdp"
        android:layout_marginTop="@dimen/__10sdp"
        android:theme="@style/CustomTimePickerStyle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/end_time_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/selected_filter_bg"
        android:text="Done"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginHorizontal="@dimen/__24sdp"
        android:layout_marginBottom="@dimen/__8sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
